# test_async_processing_service

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  consumer.py  database.py  main.py
app/alembic/: env.py
app/alembic/versions/: 846253eceed7_initial_migration.py
app/api/: dependencies.py  exception_handlers.py  router.py
app/domain/: exceptions.py
app/domain/entities/: __init__.py  outbox.py  payment.py
app/infrastructure/broker/: __init__.py  faststream_consumer.py  faststream_publisher.py  setup.py
app/infrastructure/gateways/: __init__.py  httpx_webhook.py
app/infrastructure/models/: __init__.py  outbox.py  payment.py
app/infrastructure/repositories/: __init__.py  sqlalchemy_outbox.py  sqlalchemy_payment.py
app/schemas/: payment.py
app/services/: outbox_relay.py
app/usecases/: __init__.py  create_payment.py  get_payment.py  process_payment.py  send_webhook.py
app/usecases/interfaces/: __init__.py  broker.py  gateway.py  repositories.py
tests/: test_integration.py
